--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -16,7 +16,6 @@ button.unlock: Unlock
 button.export: Export
 button.import: Import
 button.select_all: 'Select all'
-required: required
 error.not_found: 'The page you were trying to access doesn''t exist or has been removed.'
 error.not_authorized: 'You are not authorized to access this page.'
 changes.saved: 'Your changes were successfully saved.'
@@ -71,10 +70,10 @@ security.change_password: 'Change password'
 security.password_expired: 'Your password has expired or the administrator requires you to change it.'
 key.tab: Tab
 key.space: Space
-comma: Comma
-colon: Colon
-semicolon: Semicolon
-vertical_line: 'Vertical line'
+key.comma: Comma
+key.colon: Colon
+key.semicolon: Semicolon
+key.vertical_line: 'Vertical line'
 file: File
 size: Size
 delimiter: Delimiter
@@ -152,6 +151,7 @@ state.make_initial: 'Make initial'
 state.confirm.delete: 'Are you sure you want delete this state?'
 state.conflict.name: 'State with entered name already exists.'
 state.conflict.abbreviation: 'State with entered abbreviation already exists.'
+field.required: 'required field'
 field.conflict.name: 'Field with entered name already exists.'
 field.min_max_values: 'Maximum value should be greater then minimum one.'
 field.default_value: 'Default value should be in range from %min% to %max%.'
