--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -17,7 +17,6 @@ button.unlock: Atbloķēt
 button.export: Eksportēšana
 button.import: Imports
 button.select_all: 'Atlasīt visu'
-required: obligāts
 error.not_found: 'Lapa, ko Jūs mēģināt atvērt, neeksistē vai ir pārvietota.'
 error.not_authorized: 'Jums nav tiesību piekļūt šai lapai.'
 changes.saved: 'Your changes were successfully saved.'
@@ -72,10 +71,10 @@ security.change_password: 'Mainīt paroli'
 security.password_expired: 'Your password has expired or the administrator requires you to change it.'
 key.tab: Tab
 key.space: Space
-comma: Comma
-colon: Colon
-semicolon: Semicolon
-vertical_line: 'Vertical line'
+key.comma: Comma
+key.colon: Colon
+key.semicolon: Semicolon
+key.vertical_line: 'Vertical line'
 file: Datne
 size: Izmērs
 delimiter: Norobežotājs
@@ -153,6 +152,7 @@ state.make_initial: 'Padarīt par sākotnēju'
 state.confirm.delete: 'Vai tiešām vēlaties dzēst šo stāvokli?'
 state.conflict.name: 'Stāvoklis ar tādu nosaukumu jau eksistē.'
 state.conflict.abbreviation: 'Stāvoklis ar tādu saīsinājumu jau eksistē.'
+field.required: obligāts
 field.conflict.name: 'Atribūts ar tādu nosaukumu jau eksistē.'
 field.min_max_values: 'Maksimālajam lielumam jābūt lielākam par minimālo.'
 field.default_value: 'Noklusējuma nozīmei jąbūt no %min% līdz %max% apgabalā.'
