--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -17,7 +17,6 @@ button.unlock: Ontgrendel
 button.export: Exporteer
 button.import: Importeer
 button.select_all: 'Selecteer alles'
-required: vereist
 error.not_found: 'De pagina die u probeerde te benaderen bestaat niet of is verwijderd.'
 error.not_authorized: 'Het is u niet toegestaan deze pagina te raadplegen.'
 changes.saved: 'Your changes were successfully saved.'
@@ -72,10 +71,10 @@ security.change_password: 'Wijzig wachtwoord'
 security.password_expired: 'Your password has expired or the administrator requires you to change it.'
 key.tab: Tab
 key.space: Space
-comma: Comma
-colon: Colon
-semicolon: Semicolon
-vertical_line: 'Vertical line'
+key.comma: Comma
+key.colon: Colon
+key.semicolon: Semicolon
+key.vertical_line: 'Vertical line'
 file: Bestand
 size: Grootte
 delimiter: Begrenzer
@@ -153,6 +152,7 @@ state.make_initial: 'Aanmaken beginstatus'
 state.confirm.delete: 'Ben je zeker dat je deze status wilt verwijderen?'
 state.conflict.name: 'Status met ingevoerde naam bestaat reeds.'
 state.conflict.abbreviation: 'Status met ingevoerde afkorting bestaat reeds.'
+field.required: vereist
 field.conflict.name: 'Veld met ingevoerde naam bestaat reeds.'
 field.min_max_values: 'Maximum waarde moet groter dan minimum waarde zijn.'
 field.default_value: 'Standaardwaarde moet in het bereik %min% tot %max% liggen.'
