--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -17,7 +17,6 @@ button.unlock: Destravar
 button.export: Exportar
 button.import: Importar
 button.select_all: 'Selecinar todos'
-required: obrigatório
 error.not_found: 'A página que você está tentando acessar não existe ou foi excluída.'
 error.not_authorized: 'Você não está autorizado a acessar esta página.'
 changes.saved: 'Your changes were successfully saved.'
@@ -72,10 +71,10 @@ security.change_password: 'Alterar senha'
 security.password_expired: 'Your password has expired or the administrator requires you to change it.'
 key.tab: Tab
 key.space: Space
-comma: Comma
-colon: Colon
-semicolon: Semicolon
-vertical_line: 'Vertical line'
+key.comma: Comma
+key.colon: Colon
+key.semicolon: Semicolon
+key.vertical_line: 'Vertical line'
 file: Arquivo
 size: Tamanho
 delimiter: Delimitador
@@ -153,6 +152,7 @@ state.make_initial: 'Tornar inicial'
 state.confirm.delete: 'Tem certeza que quer apagar este estado?'
 state.conflict.name: 'O estado escolhido já existe.'
 state.conflict.abbreviation: 'O abreviação já existe.'
+field.required: obrigatório
 field.conflict.name: 'O Campo escolhido já existe.'
 field.min_max_values: 'O valor máximo deve ser maior do que o mínimo.'
 field.default_value: 'O valor padrão deve conter valores entre %min% e %max%.'
