--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -17,7 +17,6 @@ button.unlock: 'Lås upp'
 button.export: Exportera
 button.import: Importera
 button.select_all: 'Markera alla'
-required: obligatorisk
 error.not_found: 'Sidan du försökte komma åt existerar inte eller är borttagen.'
 error.not_authorized: 'Du saknar behörighet att komma åt den här sidan.'
 changes.saved: 'Your changes were successfully saved.'
@@ -72,10 +71,10 @@ security.change_password: 'Ändra lösenord'
 security.password_expired: 'Your password has expired or the administrator requires you to change it.'
 key.tab: Tab
 key.space: Space
-comma: Comma
-colon: Colon
-semicolon: Semicolon
-vertical_line: 'Vertical line'
+key.comma: Comma
+key.colon: Colon
+key.semicolon: Semicolon
+key.vertical_line: 'Vertical line'
 file: Fil
 size: Storlek
 delimiter: Avgränsare
@@ -153,6 +152,7 @@ state.make_initial: 'Gör första'
 state.confirm.delete: 'Är du säker på att du vill ta bort den här statusen?'
 state.conflict.name: 'Status med detta namnet finns redan.'
 state.conflict.abbreviation: 'Status med detta förkortningen finns redan.'
+field.required: obligatorisk
 field.conflict.name: 'Fält med detta namnet finns redan.'
 field.min_max_values: 'Högsta värdet bör vara större än minimum en.'
 field.default_value: 'Standardvärdet bör vara i intervallet från %min% till %max%.'
