--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -19,7 +19,7 @@ button.import: Importar
 button.select_all: 'Selecinar todos'
 error.not_found: 'A página que você está tentando acessar não existe ou foi excluída.'
 error.not_authorized: 'Você não está autorizado a acessar esta página.'
-changes.saved: 'Your changes were successfully saved.'
+changes.saved: 'Alterações salvas com sucesso.'
 security.log_in: Logar
 security.log_out: Deslogar
 security.remember_me: 'Permanecer logado'
