--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -16,9 +16,13 @@ button.lock: Sperren
 button.unlock: Freischalten
 button.export: Exportieren
 button.import: Importieren
+button.expand: Erweitern
+button.collapse: Zusammenbruch
 button.select_all: 'Alles auswählen'
+error: Fehler
 error.not_found: 'Anhang existiert nicht oder ist gelöscht worden.'
 error.not_authorized: 'Sie sind nicht berechtigt, auf diese Seite zuzugreifen.'
+please_wait: 'Bitte warten...'
 changes.saved: 'Ihre Änderungen wurden erfolgreich gespeichert.'
 security.log_in: Anmelden
 security.log_out: Abmelden
