--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -16,9 +16,13 @@ button.lock: Zárol
 button.unlock: Felnyit
 button.export: Export
 button.import: Importálás
+button.expand: Bővíteni
+button.collapse: Összeomlás
 button.select_all: 'Mind kijelölése'
+error: Hiba
 error.not_found: 'Az oldal, amit meg szeretne nézni nem található, vagy átkerült egy másik helyre.'
 error.not_authorized: 'Nincs hozzáférési engedélye ehhez az oldalhoz.'
+please_wait: 'Kérem várjon...'
 changes.saved: 'A módosítások sikeresen elmentve.'
 security.log_in: Bejelentkezés
 security.log_out: Kijelentkezés
