--- a/app/Resources/translations/messages.en_AU.yml
+++ b/app/Resources/translations/messages.en_AU.yml
@@ -16,9 +16,13 @@ button.lock: Lock
 button.unlock: Unlock
 button.export: Export
 button.import: Import
+button.expand: Expand
+button.collapse: Collapse
 button.select_all: 'Select all'
+error: Error
 error.not_found: 'The page you were trying to access doesn''t exist or has been removed.'
 error.not_authorized: 'You are not authorized to access this page.'
+please_wait: 'Please wait...'
 changes.saved: 'Your changes were successfully saved.'
 security.log_in: 'Log in'
 security.log_out: 'Log out'
