--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -16,9 +16,13 @@ button.lock: Bloquear
 button.unlock: Desbloquear
 button.export: Exportar
 button.import: Importar
+button.expand: Ampliar
+button.collapse: Colapso
 button.select_all: 'Seleccionar todo'
+error: Error
 error.not_found: 'La página a la que intenta acceder no existe.'
 error.not_authorized: 'No tiene autorización para acceder a esta página.'
+please_wait: 'Por favor espere...'
 changes.saved: 'Cambios guardados correctamente.'
 security.log_in: Ingresar
 security.log_out: Salir
