--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -16,9 +16,13 @@ button.lock: Blocca
 button.unlock: Sblocca
 button.export: Esporta
 button.import: Importa
+button.expand: Espandi
+button.collapse: Crollo
 button.select_all: 'Seleziona tutto'
+error: Errore
 error.not_found: 'La pagina desiderata non esiste o è stata rimossa.'
 error.not_authorized: 'Non sei autorizzato ad accedere a questa pagina.'
+please_wait: 'Attendere prego...'
 changes.saved: 'Your changes were successfully saved.'
 security.log_in: Entra
 security.log_out: Esci
