--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -16,9 +16,13 @@ button.lock: ロック(編集モード)
 button.unlock: ロック解除
 button.export: エクスポート
 button.import: インポート
+button.expand: 拡大
+button.collapse: 崩壊
 button.select_all: 全て選択
+error: エラー
 error.not_found: アクセスしようとしたページは存在しないか削除されています。
 error.not_authorized: このページのアクセスは許可されていません。
+please_wait: お待ちください...
 changes.saved: 'Your changes were successfully saved.'
 security.log_in: ログイン
 security.log_out: 終了
