--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -16,9 +16,13 @@ button.lock: Incuie
 button.unlock: Descuie
 button.export: Exporta
 button.import: Importa
+button.expand: Extinde
+button.collapse: Restrînge
 button.select_all: 'Selecteaza toate'
+error: Eroare
 error.not_found: 'Pagina pe care doriți să o accesați nu există sau a fost ștearsă.'
 error.not_authorized: 'Nu sunteți autorizat sa accesați această pagină.'
+please_wait: 'Va rog asteptati...'
 changes.saved: 'Your changes were successfully saved.'
 security.log_in: Autentificare
 security.log_out: Iesire
