--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -16,9 +16,13 @@ button.lock: Заблокировать
 button.unlock: Разблокировать
 button.export: Экспорт
 button.import: Импорт
+button.expand: Развернуть
+button.collapse: Свернуть
 button.select_all: 'Выбрать все'
+error: Ошибка
 error.not_found: 'Страница, к которой Вы обратились, не существует или была удалена.'
 error.not_authorized: 'Нет доступа к запрашиваемой странице.'
+please_wait: 'Пожалуйста, подождите...'
 changes.saved: 'Ваши изменения успешно сохранены.'
 security.log_in: Вход
 security.log_out: Выход
