--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -23,7 +23,7 @@ error: Fehler
 error.not_found: 'Anhang existiert nicht oder ist gelöscht worden.'
 error.not_authorized: 'Sie sind nicht berechtigt, auf diese Seite zuzugreifen.'
 please_wait: 'Bitte warten...'
-changes.saved: 'Ihre Änderungen wurden erfolgreich gespeichert.'
+changes_saved: 'Ihre Änderungen wurden erfolgreich gespeichert.'
 security.log_in: Anmelden
 security.log_out: Abmelden
 security.remember_me: 'Angemeldet bleiben'
