--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -23,7 +23,7 @@ error: Błąd
 error.not_found: 'Strona do której próbujesz się dostać nie istnieje lub została usunięta.'
 error.not_authorized: 'Nie posiadasz autoryzacji do oglądania tej strony.'
 please_wait: 'Proszę czekać...'
-changes.saved: 'Zmiany zostały zapisane.'
+changes_saved: 'Zmiany zostały zapisane.'
 security.log_in: Logowanie
 security.log_out: Wyloguj
 security.remember_me: 'Pozostań zalogowany'
