--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -23,7 +23,7 @@ error: Fel
 error.not_found: 'Sidan du försökte komma åt existerar inte eller är borttagen.'
 error.not_authorized: 'Du saknar behörighet att komma åt den här sidan.'
 please_wait: 'Var god vänta...'
-changes.saved: 'Your changes were successfully saved.'
+changes_saved: 'Your changes were successfully saved.'
 security.log_in: 'Logga in'
 security.log_out: 'Logga ut'
 security.remember_me: 'Förbli inloggad'
